k8s/20-portal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal
  namespace: golden-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal
  template:
    metadata:
      labels:
        app: portal
    spec:
      containers:
        - name: portal
          image: 059797578166.dkr.ecr.ap-southeast-2.amazonaws.com/golden-demo/portal:vuln
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: portal
  namespace: golden-demo
spec:
  type: LoadBalancer
  selector:
    app: portal
  ports:
    - port: 80
      targetPort: 8080
